fixed the middle problem on mobile

--- a/css/shop.css
+++ b/css/shop.css
@@ -5,6 +5,8 @@ main {
 /* OR if that doesn't work, add it here: */
 .shop_grid-1-1,
 .shop_grid-1-1-1 {
+  display: grid;
+  grid-template-columns: 1fr;
   padding: 0 20px;
 }
 
@@ -56,12 +58,6 @@ h2 {
   color: var(--color-text-primary);
 }
 
-.letter-margin-1,
-.letter-margin-2 {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
 @media (min-width: 800px) {
   .shop_grid-1-1 {
     display: grid;
@@ -75,6 +71,14 @@ h2 {
 
   h1 {
     text-align: start;
+  }
+
+  .hover_shop {
+    cursor: pointer;
+    max-width: 380px; /* Set consistent size for all images */
+    width: 100%;
+    height: auto;
+    display: block;
   }
 
   .shop_grid-1-1-1 {
